<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/user_setting">

        <ListPreference
            app:key="@string/noti_setting"
            app:entries="@array/sound_setting"
            app:entryValues="@array/sound_setting"
            app:title="@string/noti_setting"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="@string/fontsize_setting"
            app:entries="@array/fontsize_setting"
            app:entryValues="@array/fontsize_setting"
            app:title="@string/fontsize_setting"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/service_noti">

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

        <Preference
            app:title="@string/privacy"
            app:useSimpleSummaryProvider="true">
            <intent
                android:action=""
                android:targetClass="com.example.arearius.PrivacyActivity"/>
        </Preference>

        <Preference
            app:title="@string/using"
            app:useSimpleSummaryProvider="true">
            <intent
                android:action=""
                android:targetClass="com.example.arearius.UsingActivity"/>
        </Preference>

        <Preference
            app:title="@string/help"
            app:useSimpleSummaryProvider="true">
            <intent
                android:action=""
                android:targetClass="com.example.arearius.HelpActivity"/>
        </Preference>

        <Preference
            app:title="@string/notice"
            app:useSimpleSummaryProvider="true">
            <intent
                android:action=""
                android:targetClass="com.example.arearius.NoticeActivity"/>
        </Preference>

        <Preference
            app:title="@string/question"
            app:useSimpleSummaryProvider="true">
            <intent
                android:action="example.arearius.action.QUESTION"
                android:targetClass="com.example.arearius.QuestionActivity"/>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>