<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListDetailActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/ic_launcher_foreground"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="앱이름"
            android:textSize="25sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/descTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="설명문구 쓰는 자리입니다."
            android:layout_marginTop="5dp"/>

    </LinearLayout>


    <TextView

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="App ID"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/idTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="qerqer"
            android:textColor="#000000"/>

    </LinearLayout>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="package name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/packageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="com.dfd.dfd"
            android:textColor="#000000"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="App version"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/versionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2.0.2"
            android:textColor="#000000"/>

    </LinearLayout>

</LinearLayout>-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/apk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="24dp"
            android:text="@string/apkname"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/applabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/apk"
            android:paddingLeft="24dp" />

        <TextView
            android:id="@+id/pack_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/applabel"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/package_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/package_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pack_name"
            android:paddingLeft="24dp"  />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/package_name"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="18dp"
            android:text="@string/version"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version"
            android:paddingLeft="24dp"  />

        <TextView
            android:id="@+id/features"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version_name"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="18dp"
            android:text="@string/features"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/req_feature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/features"
            android:paddingLeft="24dp" />

        <TextView
            android:id="@+id/permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/req_feature"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="18dp"
            android:text="@string/permissions"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/req_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/permissions"
            android:paddingLeft="24dp" />

        <TextView
            android:id="@+id/path_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/req_permission"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="18dp"
            android:text="@string/path_info"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/path_info"
            android:paddingLeft="24dp"  />

        <TextView
            android:id="@+id/and_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/path"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="18dp"
            android:text="@string/req_version"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/andversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/and_version"
            android:paddingLeft="24dp"  />

        <TextView
            android:id="@+id/installed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/andversion"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="18dp"
            android:text="@string/installed"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/insdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/installed"
            android:paddingLeft="24dp"  />

        <TextView
            android:id="@+id/modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/insdate"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="18dp"
            android:text="@string/modified"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/last_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/modified"
            android:paddingLeft="24dp" />
    </RelativeLayout>

</ScrollView>